--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "This is my first backend project",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -18,7 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
-    "mongoose-aggregate-paginate-v2": "^1.1.0"
+    "mongoose-aggregate-paginate-v2": "^1.1.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
